@@ -1,3 +1,4 @@
+* Rename roundup.url configuration to bug.url
 * Use separate XML parser in Views
 * Add range selection with Shift-click
 * Use between numbers in filter box
